vs-jppublic.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jppublic-vs
spec:
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - route:
        - destination:
            host: jppublic-service.default.svc.cluster.local
            port:
              number: 8081
            #subset: v2
