vs-jppublic90.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jppublic-vs
spec:
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - route:
        - destination:
            host: jppublic-service.default.svc.cluster.local
            port:
              number: 8081
            subset: v2
          weight: 10  
        - destination:
            host: jppublic-service.default.svc.cluster.local
            port:
              number: 8081
            subset: v1
          weight: 90
